# charon

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc  .releaserc.json  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TASKS.md  catalog-info.yaml  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.claude/skills/session-planner/: SKILL.md
.github/workflows/: release.yml  semantic-release.yml
docs/: architecture.md
docs/project_notes/: bugs.md  decisions.md  issues.md  key_facts.md
scripts/: bump-version.mjs  bump-version.sh  fix-quarantine.sh
src/: App.test.tsx  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/aws/: config.rs  mod.rs  oidc.rs  saml.rs  sso_cache.rs
src-tauri/src/commands/: accounts.rs  google.rs  mod.rs  profiles.rs  sessions.rs  settings.rs  sso.rs  tunnels.rs
src/components/: ActiveTunnelCard.tsx  FontSizeToggle.tsx  Sidebar.tsx  StatusBadge.tsx  StatusBar.tsx  Terminal.tsx  ToastContainer.tsx  TopBar.tsx  TunnelForm.tsx
src/hooks/: useAccounts.ts  useProfiles.ts  useShellSession.ts  useSsoStatus.ts  useToast.ts  useTunnels.ts
src/pages/: AccountsPage.tsx  ProfileForm.tsx  ProfilesPage.tsx  SessionsPage.tsx  SettingsPage.tsx  ShellPage.tsx  TunnelsPage.tsx
src/styles/: global.css
